fix z-index tip modal issue

--- a/css/_videolayout_default.scss
+++ b/css/_videolayout_default.scss
@@ -75,6 +75,7 @@
             display: inline-block;
             float: left;
             pointer-events: all;
+            z-index: 10;
         }
     }
 
