--- a/css/filmstrip/_vertical_filmstrip_overrides.scss
+++ b/css/filmstrip/_vertical_filmstrip_overrides.scss
@@ -30,6 +30,7 @@
          */
         pointer-events: none;
         text-align: right;
+        z-index: 10;
 
         > div {
             pointer-events: none;
